LDEV-5200 Fix broken CSS entry

--- a/lams_central/web/css/_authoring_base.scss
+++ b/lams_central/web/css/_authoring_base.scss
@@ -504,7 +504,7 @@ td#templateContainerCell #collapse-heading-tool-category-3 {
 }
 
 td#templateContainerCell #collapse-heading-tool-category-4 {
-	background-color: rgb(255, 114, 172, 0.25);
+	background-color: rgba(255, 114, 172, 0.25);
 }
 
 td#templateContainerCell #collapse-heading-tool-category-5 {
